<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_gravity="" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_putih"
    tools:context=".TicketActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:src="@drawable/kartini_logo_text"
                        android:adjustViewBounds="true"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:adjustViewBounds="true"/>
                    <ImageButton
                        android:id="@+id/btn_home"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="0.6"
                        android:background="#00000000"
                        android:src="@drawable/btn_home"
                        android:scaleType="fitEnd"
                        android:adjustViewBounds="true"/>
                    <ImageButton
                        android:id="@+id/btn_menu"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="0.6"
                        android:background="#00000000"
                        android:src="@drawable/btn_menu"
                        android:scaleType="fitEnd"
                        android:adjustViewBounds="true"/>
                    <ImageButton
                        android:id="@+id/btn_akun"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="0.6"
                        android:background="#00000000"
                        android:src="@drawable/btn_user"
                        android:scaleType="fitEnd"
                        android:adjustViewBounds="true"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/header_e_ticket"
                    android:layout_marginTop="10dp"
                    android:adjustViewBounds="true"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/pilih_tanggal"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>
                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="0.7"
                        android:background="#00000000"
                        android:src="@drawable/bulan"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:layout_marginLeft="50dp"
                        android:layout_marginBottom="5dp"/>
                </LinearLayout>
                <ImageButton
                    android:id="@+id/btn_menu_knowledge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:src="@drawable/tanggal"
                    android:scaleType="fitEnd"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="Jumlah Tiket"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>
                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="0.7"
                        android:background="#00000000"
                        android:src="@drawable/jumlah_tiket"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:layout_marginLeft="50dp"
                        android:layout_marginBottom="5dp"/>
                </LinearLayout>
                <ImageButton
                    android:id="@+id/btn_menu_quiz"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#00000000"
                    android:src="@drawable/btn_cek_tiket"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="5dp"/>
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:src="@drawable/garis_putus"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/untuk_tanggal"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/tempat"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="0dp"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/_13_oktober_2021"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/museum_kartini"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/jumlah"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/estimasi_harga"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="0dp"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/_1"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/rp_5_000"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <ImageButton
                    android:id="@+id/btn_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:src="@drawable/garis_putus"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"/>
                <ImageButton
                    android:id="@+id/btn_virtual"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#00000000"
                    android:src="@drawable/btn_beli_tiket"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>