<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gerbang"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/kartini_logo_text"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="60dp"
                    android:adjustViewBounds="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/masukkan_nama"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="24dp"
                    android:inputType="text"
                    android:background="@drawable/form_round"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/masukkan_username"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="24dp"
                    android:inputType="text"
                    android:background="@drawable/form_round"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/masukkan_password"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="24dp"
                    android:inputType="textPassword"
                    android:background="@drawable/form_round_password"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/konfirmasi_password"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="24dp"
                    android:inputType="textPassword"
                    android:background="@drawable/form_round_password"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>
                <ImageButton
                    android:id="@+id/btn_daftar"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#00000000"
                    android:src="@drawable/btn_register"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginBottom="30dp"/>
                <TextView
                    android:id="@+id/link_sudah_punya_akun"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="Sudah Punya Akun?"
                    android:gravity="center"
                    android:layout_marginBottom="250dp"
                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>