<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_gravity="" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_putih"
    tools:context=".KnowledgeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:src="@drawable/kartini_logo_text"
                        android:adjustViewBounds="true"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:adjustViewBounds="true"/>
                    <ImageButton
                        android:id="@+id/btn_home"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="0.6"
                        android:background="#00000000"
                        android:src="@drawable/btn_home"
                        android:scaleType="fitEnd"
                        android:adjustViewBounds="true"/>
                    <ImageButton
                        android:id="@+id/btn_menu"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="0.6"
                        android:background="#00000000"
                        android:src="@drawable/btn_menu"
                        android:scaleType="fitEnd"
                        android:adjustViewBounds="true"/>
                    <ImageButton
                        android:id="@+id/btn_akun"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="0.6"
                        android:background="#00000000"
                        android:src="@drawable/btn_user"
                        android:scaleType="fitEnd"
                        android:adjustViewBounds="true"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/header_knowledge"
                    android:layout_marginTop="10dp"
                    android:adjustViewBounds="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/koleksi_ra_kartini"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:paddingHorizontal="20dp"
                    android:layout_marginTop="30dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_suspendisse_et_massa_elementum_elementum_turpis_a_vestibulum_risus_praesent_commodo"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:paddingHorizontal="20dp"/>
                <ImageButton
                    android:id="@+id/btn_menu_knowledge"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="#00000000"
                    android:src="@drawable/btn_selengkapnya"
                    android:scaleType="fitEnd"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/koleksi_sosro_kartono"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:paddingHorizontal="20dp"
                    android:layout_marginTop="30dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_suspendisse_et_massa_elementum_elementum_turpis_a_vestibulum_risus_praesent_commodo"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:paddingHorizontal="20dp"/>
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="#00000000"
                    android:src="@drawable/btn_selengkapnya"
                    android:scaleType="fitEnd"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/benda_bersejarah_dan_purbakala"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:paddingHorizontal="20dp"
                    android:layout_marginTop="30dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_suspendisse_et_massa_elementum_elementum_turpis_a_vestibulum_risus_praesent_commodo"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:paddingHorizontal="20dp"/>
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="#00000000"
                    android:src="@drawable/btn_selengkapnya"
                    android:scaleType="fitEnd"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ikon_joko_tua"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:paddingHorizontal="20dp"
                    android:layout_marginTop="30dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_suspendisse_et_massa_elementum_elementum_turpis_a_vestibulum_risus_praesent_commodo"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:paddingHorizontal="20dp"/>
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="#00000000"
                    android:src="@drawable/btn_selengkapnya"
                    android:scaleType="fitEnd"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="30dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>